# infobot-reborn

./: .copilotignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
docs/: architecture.md  feature_priorities.md  legacy_features.md  legacy_import.md  prompts.md
docs/plans/: legacy-import-quality-observability-plan.md
docs/plans/reviews/: multimodel-blend-sonnet.md  round1-sonnet-review.md  round2-gemini-review.md  round3-codex-review.md
src/: __init__.py  main.py  modal.py
src/infobot/: __init__.py  config.py  llm.py  message_handler.py  prompts.py
src/infobot/db/: __init__.py  connection.py  schema.py
src/infobot/discord/: __init__.py  bot.py
src/infobot/formatter/: __init__.py  response_formatter.py
src/infobot/kb/: __init__.py  factoid.py  store.py
src/infobot/nlu/: __init__.py  factoid_intent_detector.py  intents.py  question_parser.py
src/infobot/services/: __init__.py  llm_service.py
src/infobot/tools/: __init__.py  __main__.py  legacy_import.py
tests/: conftest.py  test_db_connection.py  test_db_schema.py  test_factoid.py  test_factoid_intent_detector.py  test_factoid_store.py  test_legacy_import.py  test_llm_service.py  test_message_handler.py  test_modal.py  test_question_parser.py  test_response_formatter.py
